--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: /sotormd/
+title: sotormd
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sotormd.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sotormd
